// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ask_user_tool - Snapshot Tests > renders successful ask_user interaction with detailed answer 1`] = `
"⚙ Ask user
  │  Auth Strategy: What authentication strategy should we use for the new API?
  │    → We should use JWT tokens with refresh token rotation. This provides good security
  │    while maintaining a stateless architecture.
  └─ Completed"
`;

exports[`ask_user_tool - Snapshot Tests > renders successful ask_user interaction with multi-line answer 1`] = `
"⚙ Ask user
  │  Requirements: Can you provide the requirements for the new feature?
  │    → Here are the requirements:
  │
  │    1. Users should be able to create projects
  │    2. Each project can have multiple tasks
  │    3. Tasks can be assigned to team members
  │    4. All changes should be tracked in an audit log
  │    5. Email notifications for important events
  └─ Completed"
`;

exports[`ask_user_tool - Snapshot Tests > renders successful ask_user interaction with short answer 1`] = `
"⚙ Ask user
  │  Deployment: Should we proceed with the deployment?
  │    → Yes
  └─ Completed"
`;

exports[`ask_user_tool - Snapshot Tests > renders successful ask_user interaction with technical details 1`] = `
"⚙ Ask user
  │  DB Connection: What is the database connection string for production?
  │    → postgresql://user:password@db.example.com:5432/production_db?sslmode=require
  └─ Completed"
`;
